# ctok-zed

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: zed.yml
src/: lib.rs
